syntax = "proto3";
package pb;
import "github.com/AsynkronIT/protoactor-go/actor/protos.proto";

//玩家行为操作

//登录设置连接
message SetLogin {
    actor.PID Sender = 1;
}

message SetLogined {
    string Message = 1;
    actor.PID DbmsPid = 2;
    actor.PID RoomPid = 3;
    actor.PID RolePid = 4;
    actor.PID HallPid = 5;
}

//登录网关
message LoginGate {
    actor.PID Sender = 1;
    string Userid = 2;
}

message LoginedGate {
    string Message = 1;
}

//登录大厅
message LoginHall {
    actor.PID Sender = 1;
    string Userid = 2;
    string NodeName = 3;
}

message LoginedHall {
    string Message = 1;
}

//登录成功
message Login {
    string Userid = 1;
}

message Logined {
    string Message = 1;
}

//别处登录
message LoginElse {
    string Userid = 1;
}

message LoginedElse {
    string Userid = 1;
}

//登出
message Logout {
    actor.PID Sender = 1;
    string Userid = 2;
}

message Logouted {
    actor.PID Sender = 1;
}

//同步数据,(登录时,变更时)
message SyncUser {
    string Userid = 1;
    string Data = 2;
}

//同步货币数据
message SyncCurrency {
    string Userid = 1;
    uint32 Coin = 2;//金币数量
    uint32 Diamond = 3;//钻石数量
}

//同步变动货币数据
message ChangeCurrency {
    string Userid = 1;
    int32 Type = 2;//变动类型
    int32 Coin = 3;//变动金币数量
    int32 Diamond = 4;//变动钻石数量
}

//获取数据
message GetUserid {
    actor.PID Sender = 1;
}

message GotUserid {
    string Userid = 1;
}

// 新邮件
message NewMail {
    string From = 1;
    string To = 2;
    string Content = 3;
}

// 新邮件列表
message NewMailList
{
    string maxid = 1;//邮件缓存中的最大邮件ID
}

// 删除邮件
message DeleteMail
{
    string id   = 1;//邮件ID
}

// 收取附件
message GetMailItem
{
    string id   = 1; //邮件ID
}
